fixes alignment of map text in legend

--- a/datausa/assets/scss/elements/_map.scss
+++ b/datausa/assets/scss/elements/_map.scss
@@ -184,8 +184,8 @@ $map-sidebar: 250px;
   font-family: $palanquin;
   font-size: 13px;
   font-weight: bold;
+  line-height: 19px;
   margin-right: 10px;
-  margin-top: 2px;
 }
 
 .year-toggle {
