--- a/datausa/static/css/site.css
+++ b/datausa/static/css/site.css
@@ -6741,6 +6741,7 @@
       font-family: "Palanquin", sans-serif;
       font-size: 13px;
       font-weight: bold;
+      line-height: 19px;
       margin-right: 10px;
       margin-top: 2px; }
 
